--- a/frontend-console/package.json
+++ b/frontend-console/package.json
@@ -32,7 +32,7 @@
         "typescript": "^4.8.3"
     },
     "dependencies": {
-        "@cartesi/rollups": "^0.6.0",
+        "@cartesi/rollups": "file:../../rollups/onchain/rollups",
         "@cartesi/token": "^1.7.0",
         "@ethersproject/providers": "^5.7.1",
         "@urql/core": "^3.0.3",
