--- a/frontend-console/package.json
+++ b/frontend-console/package.json
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "@cartesi/rollups": "^0.6.0",
+        "@cartesi/token": "^1.7.0",
         "@ethersproject/providers": "^5.7.1",
         "@urql/core": "^3.0.3",
         "cross-fetch": "^3.1.5",
