--- a/deploy-testnet.yml
+++ b/deploy-testnet.yml
@@ -8,7 +8,7 @@ services:
       - machine:/opt/cartesi/share/dapp-bin
 
   deployer:
-    image: cartesi/rollups-cli:0.6.0
+    image: juztamau5/rollups-cli:devel
     depends_on:
       machine:
         condition: service_started
@@ -23,6 +23,8 @@ services:
         "/opt/cartesi/share/dapp-bin/hash",
         "--outputFile",
         "/deployments/${NETWORK:?undefined NETWORK}/${DAPP_NAME:?undefined DAPP_NAME}.address",
+        "--jsonFile",
+        "/deployments/${NETWORK:?undefined NETWORK}/${DAPP_NAME:?undefined DAPP_NAME}.json",
       ]
     volumes:
       - machine:/opt/cartesi/share/dapp-bin:ro
